# yttranscript_mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  STATUS_REPORT.md  compose.yaml  docker-compose.yml  pyproject.toml  requirements-docker.txt  test_auto_generated.py  test_direct_extraction.py  test_ytdlp.py
.github/workflows/: docker.yml
docs/: authentication.md  best-practices.md  deployment.md  fastmcp_examples.txt  mcptools.md  quickstart.md  testing.md  transport-troubleshooting.md
src/: __init__.py  server.py
src/models/: __init__.py  transcript.py
src/tools/: __init__.py  transcript_tools.py
tests/: test_final_summary.py  test_server_direct.py  test_tools_individual.py
